@@ -1,3 +1,8 @@
+2004-05-03  Don Porter  <dgp@users.sourceforge.net>
+
+	* library/init.tcl:	Corrected unique prefix matching of
+	interactive command completion in [unknown].  [Bug 946952]
+
 2004-05-02  Miguel Sofer <msofer@users.sf.net>
 
 	* generic/tclProc.c (TclObjInvokeProc):
